ended seventh step